# twitch-chat-yomiage-bot

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  Cargo.toml  LICENSE  Pipfile  README.md  clippy.toml  deny.toml  justfile  pyproject.toml
.cargo/: audit.toml  config.toml
.claude/skills/analyzing-startup-profile/: SKILL.md
.claude/skills/analyzing-startup-profile/scripts/: analyze-trace.ps1
.claude/skills/triaging-cargo-audit/: SKILL.md
.githooks/: pre-commit
db/: data.json
docs/adr/: 0001-emote-exclusion-on-tcyb-side.md  0002-extract-igdb-as-separate-crate.md  0003-duplicate-auth-headers.md  0004-modernize-http-stack-to-hyper-1x.md  0005-keep-native-tls-backend.md  0006-pin-protos-by-tag.md  0007-wall-clock-tracing-for-startup-profiling.md  0008-always-on-spans-feature-gated-subscriber.md  0009-add-process-routes-entrypoint-to-vstc.md  0010-flat-param-catalog-for-gui.md  0011-disabled-step-as-forward-route.md  0012-persist-gui-state-via-eframe-storage.md  0013-config-secret-in-os-standard-user-dir.md  README.md  template.md
docs/superpowers/plans/: 2026-06-24-chat-translation-emote-passthrough.md  2026-06-24-igdb-crate-extraction.md  2026-06-24-modernize-http-stack.md  2026-06-25-startup-latency-profiling.md  2026-06-26-vstc-gui-client.md  2026-07-14-config-os-standard-location.md
docs/superpowers/specs/: 2026-06-24-chat-translation-emote-passthrough-design.md  2026-06-24-igdb-artwork-crate-extraction-design.md  2026-06-24-reqwest-axum-hyper-tonic-modernization-design.md  2026-06-25-startup-latency-profiling-design.md  2026-06-26-vstc-gui-client-design.md  2026-07-14-config-os-standard-location-design.md
igdb/: Cargo.toml
igdb/src/: api.rs  main.rs  settings.rs
src/: api.rs  auth.rs  ban.rs  chat.rs  main.rs
tcyb/: Cargo.toml  README.md  config.toml.example
tcyb/src/: api.rs  artwork.rs  auth.rs  ban.rs  channel.rs  chat.rs  chatroom.rs  eventsub.rs  irc.rs  main.rs  paths.rs  profiling.rs  settings.rs  store.rs  yomiage.rs
tests/: test_message.py
typings/: pickledb.pyi
vstc/: Cargo.toml
vstc/src/: lib.rs
vstc/tests/: test.rs
vstc_cli/: Cargo.toml  README.md
vstc_cli/src/: main.rs  sound.rs
vstc_gui/: Cargo.toml
vstc_gui/src/: app.rs  catalog.rs  fonts.rs  main.rs  opkind.rs  params.rs  state.rs
xtask/: Cargo.toml
xtask/src/: leak.rs  main.rs
yomiage/: __main__.py  api.py  auth.py  config.py  main.py  server.py  web.py
