[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "A twitch bot to read chat messages."
authors = ["sondeko <sondeko143@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.1"
click = "^8.1.3"
httpx = "^0.23.3"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pickleDB = "^0.9.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"
docutils = "^0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
