[package]
name = "igdb"
version = "0.1.0"
edition = "2021"
description = "IGDB artwork thumbnail generator"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
const_format = "0.2.30"
dotenvy = "0.15"
image = "0.24.6"
log = "0.4.17"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls"] }
serde = { version = "1.0.162", features = ["derive"] }
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }
