[package]
name = "tcyb"
version = "0.1.0"
edition = "2021"
description = "Twitch chat yomiage bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.2.7", features = ["derive"] }
config = { version = "0.13.3", features = ["toml", "indexmap"] }
const_format = "0.2.30"
dotenv = "0.15.0"
futures-util = "0.3.28"
hyper = "0.14.26"
jfs = "0.9.0"
log = "0.4.17"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tonic = "0.9.2"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
webbrowser = "0.8.9"
vstc = { path = "../vstc" }
lazy_static = "1.4.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
image = "0.24.6"
chrono = "0.4.26"
