[package]
name = "tcyb"
version = "0.1.0"
edition = "2021"
description = "Twitch chat yomiage bot"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
axum = "0.8"
clap = { version = "4.2.7", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["toml", "indexmap"] }
const_format = "0.2.30"
dotenvy = "0.15"
futures-util = "0.3.28"
jfs = "0.9.0"
log = "0.4.17"
regex = "1.8.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "native-tls"] }
serde = { version = "1.0.162", features = ["derive"] }
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
webbrowser = "0.8.9"
vstc = { path = "../vstc" }
lazy_static = "1.4.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
chrono = "0.4.26"
serde_json = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-flame = { version = "0.2.0", optional = true }
directories = "6.0.0"

[features]
profiling = ["dep:tracing-subscriber", "dep:tracing-chrome", "dep:tracing-flame"]
