[package]
name = "vstc"
version = "0.1.0"
edition = "2021"
description = "vstreamer client library"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
thiserror = "1.0.40"
tonic = "0.9.2"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
vstreamer_protos = { git = "https://github.com/sondeko143/vstreamer-protos", version = "0.1.1" }

[dev-dependencies]
mockall = "0.11.4"
tokio = "1.28.1"
tonic-reflection = "0.9.2"
